# twitscrape

./: app.py  data.txt  json-data.txt  misc.txt  requirements.txt  response decoded.txt  test.csv  test.txt  test2.csv  test_tweets.csv  tweet_data.txt  tweets.txt  twitter-scraper-seleniumwire  twitter-scraper.py  twitter-scraping.py
geolocation_twitter_scraper/: pyproject.toml  setup.cfg
geolocation_twitter_scraper/geolocation_twitter_scraper/: twitter_scraper.py
geolocation_twitter_scraper/tests/: test_twitter_scraper.py
geotwit/: .gitignore  pyproject.toml  test.csv
geotwit/geotwit/: test.py  twitter_scraper.py
twitscrape/: .gitignore  README.md  pyproject.toml
twitscrape/tests/: test_twitter_scraper.py
twitscrape/twitscrape/: test.py  twitter_scraper.py
twitscrape/twitscrape.egg-info/: SOURCES.txt
utils/: twitter_scraper.py
