[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geolocation_twitter_scraper"
version = "0.0.1"
authors = [
  { name="Christian Harrison" },
]
description = "Simple package using Selenium to scrape tweet data based on geolocation and datetime"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/christywastaken/geolocation-twitter-scraper"
"Bug Tracker" = "https://github.com/christywastaken/geolocation-twitter-scraper/issues"